prevent title on mobile to generate scroll burglar

--- a/src/components/ProjectTitle/ProjectTitle.module.css
+++ b/src/components/ProjectTitle/ProjectTitle.module.css
@@ -41,8 +41,12 @@
     }
     .mobile_only {
         display: block;
+        overflow: hidden;
     }
     .mobile_only .h1_container {
         display: grid;
+    }
+    .mobile_only .h1 {
+        font-size: 3rem;
     }
 }
